--- a/raphaelsaru/style.css
+++ b/raphaelsaru/style.css
@@ -145,7 +145,7 @@ body {
     font-size: 1.1em;
     line-height: 1.7;
     color: #222;
-    text-align: justify;
+    text-align: left;
 }
 
 .experience-item, .course-item {
